# fel-krp-project

./: .cproject  .editorconfig  .gitignore  .gitmodules  .mxproject  .prettierignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  STM32F407IGHX_FLASH.ld  STM32F407IGHX_RAM.ld  fel-krp-project.ioc
.github/workflows/: ci.yml  docs-deploy.yml  docs.yml  tools-scripts.yml
Inc/: app.h  endianness.h  fatfs_platform.h  flash.h  main.h  memory_layout.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  terminal.h  usb_device.h  usbd_conf.h  usbd_desc.h  utils.h
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Inc/: usbd_customhid.h
Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c
Middlewares/ST/STM32_USB_Device_Library/Class/HID/Src/: usbd_hid.c
Src/: app.c  device.c  flash.c  main.c  rng.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c  syscalls.c  sysmem.c  system_stm32f4xx.c  usb_device.c  usbd_conf.c  usbd_custom_hid_if.c  usbd_desc.c  usbh_conf.c  usbh_platform.c  utils.c
core/: compiler.h  cose.h  ctap.c  ctap.h  ctap_asn1.c  ctap_asn1.h  ctap_cbor.h  ctap_common.h  ctap_credential_management.c  ctap_credential_store.c  ctap_credentials.c  ctap_credentials_store.h  ctap_crypto.h  ctap_crypto_software.c  ctap_crypto_software.h  ctap_encode.c  ctap_encode.h  ctap_errors.h  ctap_get_info.c  ctap_memory_storage.c  ctap_memory_storage.h  ctap_parse.c  ctap_parse.h  ctap_pin.c  ctap_pin.h  ctap_pin_protocol.c  ctap_pin_protocol.h  ctap_pin_uv_auth_token.c  ctap_pin_uv_auth_token_state.h  ctap_reset.c  ctap_selection.c  ctap_storage.h  ctap_string.c  ctap_string.h  ctaphid.c  ctaphid.h  debug.h  terminal.h  utils.c  utils.h
crypto/hash/: hash.h
crypto/hkdf/: hkdf.c  hkdf.h
crypto/hmac/: hmac.c  hmac.h
crypto/sha256/: hkdf.c  hkdf.h  hmac.c  hmac.h  sha256.c  sha256.h
docs/: .prettierrc  README.md  docusaurus.config.ts  fido2-usb-data-flow.drawio  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
docs/assets/img/: lionkey-logo.afdesign
docs/content/: intro.md  usage-guide.md
docs/content/architecture/: _category_.json  core.md
docs/content/development/: _category_.json  getting-started.md  nodejs.md  openocd.md
docs/docs/tutorial-basics/: markdown-features.mdx
docs/src/: sidebars.ts
docs/src/components/HomepageFeatures/: index.tsx
docs/src/pages/: index.module.css  index.tsx
docs/src/theme/DocBreadcrumbs/Items/Home/: index.tsx
docs/src/theme/Footer/: index.tsx
docs/src/theme/Logo/: index.tsx
docs/src/theme/Navbar/Logo/: index.tsx
docs/src/theme/NotFound/: index.tsx
docs/src/theme/NotFound/Content/: index.tsx
docs/static/: _headers  _redirects
fido2/: README.md  apdu.c  apdu.h  cose_key.h  crypto.c  crypto.h  ctap.c  ctap.h  ctap_errors.h  ctap_parse.c  ctap_parse.h  ctaphid.c  ctaphid.h  data_migration.c  data_migration.h  device.c  device.h  example_app.h  linked_list.c  linked_list.h  log.c  log.h  storage.h  stubs.c  test_power.c  time.c  time.h  u2f.c  u2f.h  util.c  util.h  version.c  version.h
fido2/extensions/: extensions.c  extensions.h  solo.c  solo.h  wallet.c  wallet.h
scripts/: .prettierignore  package-lock.json  package.json
scripts/src/: pin-uv-auth-protocol.ts  test.ts
svd/: Cortex-M33.svd  README.md
targets/stm32f407/: .cproject  .mxproject  .project  CMakeLists.txt  README.md  fel-krp-project.ioc  stm3240g_eval_stlink.cfg
targets/stm32f407/Inc/: fifo.h  memory_layout.h  rng.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usb_device.h  usbd_custom_hid_if.h  utils.h
targets/stm32f407/Middlewares/ST/STM32_USB_Device_Library/Class/CustomHID/Src/: usbd_customhid.c
targets/stm32f407/Src/: fifo.c  stm32f4xx_hal_msp.c  syscalls.c  usb_device.c  usbd_conf.c  usbd_custom_hid_if.c  usbd_desc.c  utils.c
targets/stm32h533/: .mxproject  CMakeLists.txt  STM32H533xx_FLASH.ld  STM32H533xx_RAM.ld  invalidate-storage.hex  stm32h533.ioc
targets/stm32h533/Drivers/STM32H5xx_HAL_Driver/Inc/: stm32h5xx_hal_rcc.h
targets/stm32h533/Inc/: app.h  app_hw_crypto.h  app_hw_crypto_curves.h  app_test.h  flash.h  flash_storage.h  hw_crypto.h  hw_crypto_curves.h  lionkey_config.h  main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h  tusb_config.h  usb.h
targets/stm32h533/Src/: app.c  app_hw_crypto.c  app_hw_crypto_curves.c  app_test.c  flash_storage.c  hw_crypto.c  hw_crypto_curves.c  main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c  syscalls.c  sysmem.c  system_stm32h5xx.c  usb.c  usb_descriptors.c
targets/stm32h533/cmake/: gcc-arm-none-eabi.cmake
targets/stm32h533/cmake/stm32cubemx/: CMakeLists.txt
test/: CMakeLists.txt
test/gtest_custom_assertions/: gtest_custom_assertions.cpp  gtest_custom_assertions.h
test/hex_utils/: hex.hpp
test/inc/: app.h
test/lionkey/: consistent_prng.cpp  ctap_test.c  ctap_test.h  keepalive.c  lionkey_config.h  time.c  wait_for_user_presence.c
test/src/: cbor_test.cpp  consistent_prng.cpp  ctap_asn1_test.cpp  ctap_client_pin_test.cpp  ctap_get_assertion_test.cpp  ctap_get_info.cpp  ctap_get_info_test.cpp  ctap_make_credential_test.cpp  ctap_parse_client_pin_test.cpp  ctap_parse_credential_management_test.cpp  ctap_parse_get_assertion_test.cpp  ctap_parse_make_credential_test.cpp  ctap_software_crypto_test.cpp  ctap_string_truncation_test.cpp  ctaphid_test.cpp  gtest_custom_assertions.cpp  gtest_custom_assertions.h  gtest_sanitizers_integration.cpp  hello_test.cpp  hex_utils_test.cpp  hkdf_sha256_test.cpp  hmac_sha256_test.cpp  micro_ecc_test.cpp  sha256_test.cpp  tiny_aes_test.cpp  tusb_fifo_test.cpp  ubsan_test.cpp
test/tinyusb/: tusb_config.h
tools/fido-mds/: README.md  lionkey-statement.json
tools/scripts/: .eslintrc.cjs  README.md  package-lock.json  package.json  tsconfig.json
tools/scripts/src/: fido-conformance-tools-automation-server.ts  hex-file.ts  pin-uv-auth-protocol.ts  test.ts
tools/svd/: CMSIS-SVD_Schema_1_1.xsd  Cortex-M4.svd  README.md
tools/webhid-debugger/: README.md  index.html
web/: README.md  demo.js  index.html  styles.css
